# manager-add_logging

./: .gitignore  README.md  logger.py  logger2.py  main.py  pyproject.toml
