[tool.poetry]
name = "manager"
version = "0.1.0"
description = "trying to use webdriver-manager for firefox"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^3.8.5"
selenium = "^4.7.2"
fake-useragent = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
